--- a/sympy/logic/tests/Makefile
+++ b/sympy/logic/tests/Makefile
@@ -1,7 +1,7 @@
 # Compiler and flags
 CXX = g++
-CXXFLAGS = -I/opt/homebrew/Cellar/z3/4.13.3/include
-LDFLAGS = -L/opt/homebrew/Cellar/z3/4.13.3/lib -lz3
+CXXFLAGS = -I/opt/homebrew/Cellar/z3/4.13.3/include -I/opt/homebrew/Cellar/gperftools/2.16/include
+LDFLAGS = -L/opt/homebrew/Cellar/z3/4.13.3/lib -L/opt/homebrew/Cellar/gperftools/2.16/lib -lz3 -lprofiler -ltcmalloc
 
 # Target name
 TARGET = blah
@@ -11,7 +11,7 @@ SRC = blah.cpp
 all: $(TARGET)
 
 $(TARGET): $(SRC)
-	$(CXX) -o $(TARGET) $(SRC) $(CXXFLAGS) $(LDFLAGS)
+	arch -x86_64 $(CXX) $(CXXFLAGS) -o $(TARGET) $(SRC) $(LDFLAGS)
 
 # Clean up build files
 clean:
